# ALWeaver

./: .gitignore  README.md  frontend_plan.md  plan.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/data/saved_interviews/: city_council_interview.yml
backend/app/services/: storage.py  yaml_parser.py
backend/docassemble_editor_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/package.json         (edit)   # add a test script if you want: "test": "vitest"/vitest.config.ts     (create)/: App.test.tsx     (create)  # simple "hello world" test using vitest
frontend/src/: App.test.tsx  App.tsx  index.css  vitest.setup.ts
frontend/src/api/: client.ts  docassemble.ts  types.ts
frontend/src/components/blocks/: AddBlockTrigger.tsx  AttachmentBlockEditor.tsx  (+10 more)
frontend/src/data/: sampleInterview.ts
frontend/src/hooks/: useAutoValidation.ts  useEditorSync.ts  useFilteredBlocks.ts
frontend/src/state/: docassembleStore.ts  editorStore.ts  types.ts
frontend/src/store/: useBlockStore.ts
frontend/src/styles/: global.css
frontend/src/types/: blocks.ts
frontend/src/utils/: blockTemplates.ts  constants.ts  docassembleConfig.ts  interviewOrder.ts  interviewOrderAST.ts  interviewOrderCodegen.ts  interviewOrderLinting.ts  markdown.ts  raw-imports.d.ts  sampleInterview.ts  sampleInterview.yml  yaml.ts  yamlMapper.ts
(+34 files in other folders)
